Fix stretched markdown image issue

--- a/sass/layout/_markdown.scss
+++ b/sass/layout/_markdown.scss
@@ -61,7 +61,6 @@ h6 {
     
     div .markdown-inline-img {
         display: inline-block;
-        width: 100%;
         vertical-align: middle;
     }
     
